# detect_faces

./: CMakeLists.txt  detect_faces.code-workspace  face_detector_wrapper.cpp  facenet_wrapper.cpp  main.cpp  multi_modal_lib.cpp  old.gitattributes  raspivid_start.sh  test_gst.sh  test_reader.cpp
facenet-model/FP16/: 20180402-114759.mapping  20180402-114759.xml
facenet-model/FP32/: 20180402-114759.mapping  20180402-114759.xml
include/: common.hpp  face_detector.hpp  face_detector_wrapper.h  facenet.hpp  facenet_wrapper.h  multi_modal.hpp  multi_modal_lib.h  multimodal.hpp  write_jpeg.hpp
resnet50_128_caffe/FP16/: resnet50_128.mapping  resnet50_128.xml
resnet50_128_caffe/FP32/: resnet50_128.mapping  resnet50_128.xml
